app/kumactl/cmd/install/testdata/install-cp-helm/meshZoneProxyDeploymentAnnotations.golden.yaml

---
apiVersion: v1
kind: Namespace
metadata:
  name: kuma-system
  labels:
    kuma.io/sidecar-injection: "false"
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: kuma-control-plane
  namespace: kuma-system
  labels: 
    app: kuma-control-plane
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: kuma-default-ingress
  namespace: kuma-system
  labels: 
    app: kuma-default-ingress
    kuma.io/mesh: default
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: kuma-default-egress
  namespace: kuma-system
  labels: 
    app: kuma-default-egress
    kuma.io/mesh: default
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: kuma-control-plane-config
  namespace: kuma-system
  labels: 
    app: kuma-control-plane
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
data:
  config.yaml: |
    # use this file to override default configuration of `kuma-cp`
    #
    # see conf/kuma-cp.conf.yml for available settings
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: kuma-transparent-proxy-config
  namespace: kuma-system
  labels:
    app: kuma-control-plane
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
data:
  config.yaml: |
    comments:
      disabled: false
    dropInvalidPackets: false
    ipFamilyMode: dualstack
    iptablesExecutables:
      ip6tables: ""
      ip6tables-restore: ""
      ip6tables-save: ""
      iptables: ""
      iptables-restore: ""
      iptables-save: ""
    kumaDPUser: "5678"
    log:
      enabled: false
    redirect:
      dns:
        captureAll: true
        enabled: true
        port: 15053
        resolvConfigPath: /etc/resolv.conf
        skipConntrackZoneSplit: false
      inbound:
        enabled: true
        excludePorts: []
        excludePortsForIPs: []
        excludePortsForUIDs: []
        includePorts: []
        insertRedirectInsteadOfAppend: false
        port: 15006
      outbound:
        enabled: true
        excludePorts: []
        excludePortsForIPs: []
        excludePortsForUIDs: []
        includePorts: []
        insertRedirectInsteadOfAppend: false
        port: 15001
      vnet:
        networks: []
    retry:
      maxRetries: 4
      sleepBetweenRetries: 2s
    storeFirewalld: false
    verbose: false
    wait: 5
    waitInterval: 0
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kuma-control-plane
  labels: 
    app: kuma-control-plane
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
rules:
  # Kubernetes resources
  - apiGroups:
      - ""
    resources:
      - namespaces
      - pods
      - nodes
      - services
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - "discovery.k8s.io"
    resources:
      - endpointslices
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - "apps"
    resources:
      - deployments
      - replicasets
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - "batch"
    resources:
      - jobs
    verbs:
      - get
      - list
      - watch
  - apiGroups: # Gateway API
      - gateway.networking.k8s.io
    resources:
      - grpcroutes
      - httproutes
      - referencegrants
    verbs:
      - get
      - list
      - watch
  - apiGroups: # Gateway API legacy finalizer cleanup during upgrade
      - gateway.networking.k8s.io
    resources:
      - gatewayclasses
    verbs:
      - get
      - list
      - patch
  - apiGroups:
      - kuma.io
    resources:
      - dataplanes
      - dataplaneinsights
      - meshes
      - zones
      - zoneinsights
      - meshinsights
      - containerpatches
      - meshaccesslogs
      - meshcircuitbreakers
      - meshfaultinjections
      - meshhealthchecks
      - meshhttproutes
      - meshloadbalancingstrategies
      - meshmetrics
      - meshpassthroughs
      - meshproxypatches
      - meshratelimits
      - meshretries
      - meshtcproutes
      - meshtimeouts
      - meshtlses
      - meshtraces
      - meshtrafficpermissions
      - hostnamegenerators
      - meshexternalservices
      - meshidentities
      - meshmultizoneservices
      - meshopentelemetrybackends
      - meshservices
      - meshtrusts
      - meshzoneaddresses
      - workloads
    verbs:
      - get
      - list
      - watch
      - create
      - update
      - patch
      - delete
  - apiGroups:
      - kuma.io
    resources:
      - meshes/finalizers
      - dataplanes/finalizers
    verbs:
      - get
      - patch
      - update
  # validate k8s token before issuing mTLS cert
  - apiGroups:
      - authentication.k8s.io
    resources:
      - tokenreviews
    verbs:
      - create
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kuma-control-plane-workloads
  labels: 
    app: kuma-control-plane
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
rules:
  - apiGroups:
      - ""
      - events.k8s.io
    resources:
      - events
    verbs:
      - create
      - patch
  - apiGroups:
    # required to resolve the workload name behind a serviceless Pod
      - "apps"
    resources:
      - replicasets
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - "batch"
    resources:
      - jobs
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - ""
    resources:
      - services
    verbs:
      - get
      - list
      - watch
      - update
      - patch
  - apiGroups:
      - ""
    resources:
      - pods/finalizers
    verbs:
      - get
      - patch
      - update
  - apiGroups:
    # Gateway API
      - gateway.networking.k8s.io
    resources:
      - grpcroutes
      - httproutes
    verbs:
      - create
      - delete
      - get
      - list
      - patch
      - update
      - watch
  - apiGroups:
      - gateway.networking.k8s.io
    resources:
      - grpcroutes/status
    verbs:
      - get
      - patch
      - update
  - apiGroups:
      - gateway.networking.k8s.io
    resources:
      - httproutes/status
    verbs:
      - get
      - patch
      - update
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: kuma-control-plane
  labels: 
    app: kuma-control-plane
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: kuma-control-plane
subjects:
  - kind: ServiceAccount
    name: kuma-control-plane
    namespace: kuma-system
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: kuma-control-plane-workloads
  labels: 
    app: kuma-control-plane
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: kuma-control-plane-workloads
subjects:
  - kind: ServiceAccount
    name: kuma-control-plane
    namespace: kuma-system
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: kuma-control-plane
  namespace: kuma-system
  labels: 
    app: kuma-control-plane
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
rules:
  - apiGroups:
      - coordination.k8s.io
    resources:
      - leases
    verbs:
      - get
      - list
      - watch
      - create
      - update
      - patch
      - delete
  - apiGroups:
      - ""
    resources:
      - configmaps
      - secrets
    verbs:
      - get
      - delete
      - list
      - watch
      - create
      - update
      - patch
  - apiGroups:
      - ""
      - events.k8s.io
    resources:
      - events
    verbs:
      - create
      - patch
  # leader-for-life election deletes Pods in some circumstances
  - apiGroups:
      - ""
    resources:
      - pods
    verbs:
      - delete
  - apiGroups:
      - gateway.networking.k8s.io
    resources:
      - grpcroutes
      - httproutes
    verbs:
      - create
      - delete
      - get
      - list
      - patch
      - update
      - watch
  - apiGroups:
      - gateway.networking.k8s.io
    resources:
      - grpcroutes/status
    verbs:
      - get
      - patch
      - update
  - apiGroups:
      - gateway.networking.k8s.io
    resources:
      - httproutes/status
    verbs:
      - get
      - patch
      - update
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: kuma-control-plane
  namespace: kuma-system
  labels: 
    app: kuma-control-plane
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: kuma-control-plane
subjects:
  - kind: ServiceAccount
    name: kuma-control-plane
    namespace: kuma-system
---
apiVersion: v1
kind: Service
metadata:
  name: kuma-control-plane
  namespace: kuma-system
  labels: 
    app: kuma-control-plane
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
  annotations:
    prometheus.io/port: "5680"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - port: 5680
      name: diagnostics
      appProtocol: http
    - port: 5681
      name: http-api-server
      appProtocol: http
    - port: 5682
      name: https-api-server
      appProtocol: https
    - port: 443
      name: https-admission-server
      targetPort: 5443
      appProtocol: https
    - port: 5678
      name: dp-server
      appProtocol: https
  selector:
    app: kuma-control-plane
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
---
apiVersion: v1
kind: Service
metadata:
  name: kuma-default-ingress
  namespace: kuma-system
  labels:
    app: kuma-default-ingress
    kuma.io/mesh: default
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
    k8s.kuma.io/zone-proxy-type: ingress
spec:
  type: LoadBalancer
  ports:
    - port: 10001
      protocol: TCP
      targetPort: 10001
  selector:
    app: kuma-default-ingress
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
---
apiVersion: v1
kind: Service
metadata:
  name: kuma-default-egress
  namespace: kuma-system
  labels:
    app: kuma-default-egress
    kuma.io/mesh: default
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
    k8s.kuma.io/zone-proxy-type: egress
spec:
  type: ClusterIP
  ports:
    - port: 10002
      protocol: TCP
      targetPort: 10002
  selector:
    app: kuma-default-egress
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuma-control-plane
  namespace: kuma-system
  labels: 
    app: kuma-control-plane
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
  annotations: 
    
spec:
  replicas: 1
  minReadySeconds: 0
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: kuma
      app.kubernetes.io/instance: kuma
      app: kuma-control-plane
  template:
    metadata:
      annotations:
        checksum/config: 1fa6f39d97a8aad47eff6f6670269d3333a30c2e107b0a9d14b2aa23e0f3bf24
        checksum/tls-secrets: f6033fcf07311251d42af5ec4d088306bf0aa0300daf9ddcd142032744c4fdbd
      labels: 
        app: kuma-control-plane
        app.kubernetes.io/name: kuma
        app.kubernetes.io/instance: kuma
    spec:
      affinity: 
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - 'kuma'
                - key: app.kubernetes.io/instance
                  operator: In
                  values:
                  - 'kuma'
                - key: app
                  operator: In
                  values:
                  - 'kuma-control-plane'
              topologyKey: kubernetes.io/hostname
            weight: 100
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: kuma-control-plane
      automountServiceAccountToken: true
      restartPolicy: Always
      nodeSelector:
        
        kubernetes.io/os: linux
      hostNetwork: false
      terminationGracePeriodSeconds: 30
      
      containers:
        - name: control-plane
          image: "docker.io/kumahq/kuma-cp:0.0.1"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          env:
            - name: KUMA_API_SERVER_AUTHN_LOCALHOST_IS_ADMIN
              value: "false"
            - name: KUMA_API_SERVER_READ_ONLY
              value: "true"
            - name: KUMA_BOOTSTRAP_SERVER_PARAMS_ENVOY_ADMIN_UNIX_SOCKET
              value: "true"
            - name: KUMA_DEFAULTS_SKIP_MESH_CREATION
              value: "false"
            - name: KUMA_DP_SERVER_HDS_ENABLED
              value: "false"
            - name: KUMA_ENVIRONMENT
              value: "kubernetes"
            - name: KUMA_GENERAL_TLS_CERT_FILE
              value: "/var/run/secrets/kuma.io/tls-cert/tls.crt"
            - name: KUMA_GENERAL_TLS_KEY_FILE
              value: "/var/run/secrets/kuma.io/tls-cert/tls.key"
            - name: KUMA_INJECTOR_INIT_CONTAINER_IMAGE
              value: "docker.io/kumahq/kuma-init:0.0.1"
            - name: KUMA_INJECTOR_INIT_CONTAINER_IMAGE_PULL_POLICY
              value: "IfNotPresent"
            - name: KUMA_INJECTOR_INIT_CONTAINER_RESOURCES_LIMITS_CPU
              value: "0"
            - name: KUMA_INJECTOR_INIT_CONTAINER_RESOURCES_LIMITS_MEMORY
              value: "50M"
            - name: KUMA_INJECTOR_INIT_CONTAINER_RESOURCES_REQUESTS_CPU
              value: "20m"
            - name: KUMA_INJECTOR_INIT_CONTAINER_RESOURCES_REQUESTS_MEMORY
              value: "20M"
            - name: KUMA_INJECTOR_SIDECAR_CONTAINER_RESOURCES_LIMITS_CPU
              value: "0"
            - name: KUMA_INJECTOR_SIDECAR_CONTAINER_RESOURCES_LIMITS_MEMORY
              value: "512Mi"
            - name: KUMA_INJECTOR_SIDECAR_CONTAINER_RESOURCES_REQUESTS_CPU
              value: "50m"
            - name: KUMA_INJECTOR_SIDECAR_CONTAINER_RESOURCES_REQUESTS_MEMORY
              value: "64Mi"
            - name: KUMA_INJECTOR_VALIDATION_CONTAINER_RESOURCES_LIMITS_CPU
              value: "0"
            - name: KUMA_INJECTOR_VALIDATION_CONTAINER_RESOURCES_LIMITS_MEMORY
              value: "50M"
            - name: KUMA_INJECTOR_VALIDATION_CONTAINER_RESOURCES_REQUESTS_CPU
              value: "20m"
            - name: KUMA_INJECTOR_VALIDATION_CONTAINER_RESOURCES_REQUESTS_MEMORY
              value: "20M"
            - name: KUMA_MODE
              value: "zone"
            - name: KUMA_MONITORING_ASSIGNMENT_SERVER_ENABLED
              value: "false"
            - name: KUMA_PLUGIN_POLICIES_ENABLED
              value: "meshaccesslogs,meshcircuitbreakers,meshfaultinjections,meshhealthchecks,meshhttproutes,meshloadbalancingstrategies,meshmetrics,meshpassthroughs,meshproxypatches,meshratelimits,meshretries,meshtcproutes,meshtimeouts,meshtlses,meshtraces,meshtrafficpermissions"
            - name: KUMA_RUNTIME_KUBERNETES_ADMISSION_SERVER_CERT_DIR
              value: "/var/run/secrets/kuma.io/tls-cert"
            - name: KUMA_RUNTIME_KUBERNETES_ADMISSION_SERVER_PORT
              value: "5443"
            - name: KUMA_RUNTIME_KUBERNETES_ALLOWED_USERS
              value: "system:serviceaccount:kuma-system:kuma-control-plane"
            - name: KUMA_RUNTIME_KUBERNETES_CONTROL_PLANE_SERVICE_NAME
              value: "kuma-control-plane"
            - name: KUMA_RUNTIME_KUBERNETES_INJECTOR_CA_CERT_FILE
              value: "/var/run/secrets/kuma.io/tls-cert/ca.crt"
            - name: KUMA_RUNTIME_KUBERNETES_INJECTOR_CNI_ENABLED
              value: "false"
            - name: KUMA_RUNTIME_KUBERNETES_INJECTOR_SIDECAR_CONTAINER_IMAGE
              value: "docker.io/kumahq/kuma-dp:0.0.1"
            - name: KUMA_RUNTIME_KUBERNETES_INJECTOR_SIDECAR_CONTAINER_IMAGE_PULL_POLICY
              value: "IfNotPresent"
            - name: KUMA_RUNTIME_KUBERNETES_INJECTOR_TRANSPARENT_PROXY_CONFIGMAP_NAME
              value: "kuma-transparent-proxy-config"
            - name: KUMA_STORE_KUBERNETES_SYSTEM_NAMESPACE
              value: "kuma-system"
            - name: KUMA_STORE_TYPE
              value: "kubernetes"
            - name: KUMA_INTER_CP_CATALOG_INSTANCE_ADDRESS
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: GOMEMLIMIT
              valueFrom:
                resourceFieldRef:
                  containerName: control-plane
                  resource: limits.memory
                  divisor: "1"
            - name: GOMAXPROCS
              valueFrom:
                resourceFieldRef:
                  containerName: control-plane
                  resource: limits.cpu
                  divisor: "1"
          args:
            - run
            - --log-level=info
            - --log-output-path=
            - --config-file=/etc/kuma.io/kuma-control-plane/config.yaml
          ports:
            - containerPort: 5680
              name: diagnostics
              protocol: TCP
            - containerPort: 5681
            - containerPort: 5682
            - containerPort: 5443
            - containerPort: 5678
          livenessProbe:
            timeoutSeconds: 10
            httpGet:
              path: /healthy
              port: 5680
          readinessProbe:
            timeoutSeconds: 10
            httpGet:
              path: /ready
              port: 5680
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 500m
              memory: 256Mi
          
          volumeMounts:
            - name: general-tls-cert
              mountPath: /var/run/secrets/kuma.io/tls-cert/tls.crt
              subPath: tls.crt
              readOnly: true
            - name: general-tls-cert
              mountPath: /var/run/secrets/kuma.io/tls-cert/tls.key
              subPath: tls.key
              readOnly: true
            - name: general-tls-cert
              mountPath: /var/run/secrets/kuma.io/tls-cert/ca.crt
              subPath: ca.crt
              readOnly: true
            - name: kuma-control-plane-config
              mountPath: /etc/kuma.io/kuma-control-plane
              readOnly: true
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: general-tls-cert
          secret:
            secretName: general-tls-secret
        - name: kuma-control-plane-config
          configMap:
            name: kuma-control-plane-config
        - name: tmp
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuma-default-ingress
  namespace: kuma-system
  labels:
    app: kuma-default-ingress
    kuma.io/mesh: default
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
    team: platform
  annotations:
    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
    custom.io/annotation: ingress-value
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: kuma-default-ingress
      app.kubernetes.io/name: kuma
      app.kubernetes.io/instance: kuma
  template:
    metadata:
      annotations:
        kuma.io/reachable-backends: '{"refs":[]}'
      labels:
        app: kuma-default-ingress
        kuma.io/mesh: default
        app.kubernetes.io/name: kuma
        app.kubernetes.io/instance: kuma
        kuma.io/sidecar-injection: enabled
        k8s.kuma.io/zone-proxy-type: ingress
    spec:
      securityContext:
        runAsUser: 5678
        runAsGroup: 5678
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: kuma-default-ingress
      automountServiceAccountToken: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 40
      containers:
        - name: pause
          image: "registry.k8s.io/pause:3.10@sha256:ee6521f290b2168b6e0935a181d4cff9be1ac3f505666ef0e3c98fae8199917a"
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              memory: 16Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuma-default-egress
  namespace: kuma-system
  labels:
    app: kuma-default-egress
    kuma.io/mesh: default
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
  annotations:
    custom.io/annotation: egress-value
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: kuma-default-egress
      app.kubernetes.io/name: kuma
      app.kubernetes.io/instance: kuma
  template:
    metadata:
      annotations:
        kuma.io/reachable-backends: '{"refs":[]}'
      labels:
        app: kuma-default-egress
        kuma.io/mesh: default
        app.kubernetes.io/name: kuma
        app.kubernetes.io/instance: kuma
        kuma.io/sidecar-injection: enabled
        k8s.kuma.io/zone-proxy-type: egress
    spec:
      securityContext:
        runAsUser: 5678
        runAsGroup: 5678
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: kuma-default-egress
      automountServiceAccountToken: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 40
      containers:
        - name: pause
          image: "registry.k8s.io/pause:3.10@sha256:ee6521f290b2168b6e0935a181d4cff9be1ac3f505666ef0e3c98fae8199917a"
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              memory: 16Mi
          lifecycle:
            preStop:
              sleep:
                seconds: 20
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kuma-admission-mutating-webhook-configuration
  namespace: kuma-system
  labels: 
    app: kuma-control-plane
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
webhooks:
  - name: mesh.defaulter.kuma-admission.kuma.io
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: kuma.io/sidecar-injection
          operator: Exists
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
          - kube-system
    clientConfig:
      caBundle: XYZ
      service:
        namespace: kuma-system
        name: kuma-control-plane
        path: /default-kuma-io-v1alpha1-mesh
    rules:
      - apiGroups:
          - kuma.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - meshes
          - dataplanes
          - dataplaneinsights
          - zones
          - zoneinsights
          - meshaccesslogs
          - meshcircuitbreakers
          - meshfaultinjections
          - meshhealthchecks
          - meshhttproutes
          - meshloadbalancingstrategies
          - meshmetrics
          - meshpassthroughs
          - meshproxypatches
          - meshratelimits
          - meshretries
          - meshtcproutes
          - meshtimeouts
          - meshtlses
          - meshtraces
          - meshtrafficpermissions
          - hostnamegenerators
          - meshexternalservices
          - meshidentities
          - meshmultizoneservices
          - meshopentelemetrybackends
          - meshservices
          - meshtrusts
          - meshzoneaddresses
          - workloads
    sideEffects: None
  - name: owner-reference.kuma-admission.kuma.io
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: kuma.io/sidecar-injection
          operator: Exists
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
          - kube-system
    clientConfig:
      caBundle: XYZ
      service:
        namespace: kuma-system
        name: kuma-control-plane
        path: /owner-reference-kuma-io-v1alpha1
    rules:
      - apiGroups:
          - kuma.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
        resources:
          - meshaccesslogs
          - meshcircuitbreakers
          - meshfaultinjections
          - meshhealthchecks
          - meshhttproutes
          - meshloadbalancingstrategies
          - meshmetrics
          - meshpassthroughs
          - meshproxypatches
          - meshratelimits
          - meshretries
          - meshtcproutes
          - meshtimeouts
          - meshtlses
          - meshtraces
          - meshtrafficpermissions
          - hostnamegenerators
          - meshexternalservices
          - meshidentities
          - meshmultizoneservices
          - meshopentelemetrybackends
          - meshservices
          - meshtrusts
          - meshzoneaddresses
          - workloads
  
      
    sideEffects: None
  - name: namespace-kuma-injector.kuma.io
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: kuma.io/sidecar-injection
          operator: In
          values:
          - enabled
          - "true"
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
          - kube-system
          - kuma-system
    clientConfig:
      caBundle: XYZ
      service:
        namespace: kuma-system
        name: kuma-control-plane
        path: /inject-sidecar
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
  - name: pods-kuma-injector.kuma.io
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: kuma.io/sidecar-injection
          operator: Exists
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
          - kube-system
          - kuma-system
    objectSelector:
      matchLabels:
        kuma.io/sidecar-injection: enabled
    clientConfig:
      caBundle: XYZ
      service:
        namespace: kuma-system
        name: kuma-control-plane
        path: /inject-sidecar
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
  - name: mesh-zoneproxy-kuma-injector.kuma.io
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - kuma-system
    objectSelector:
      matchExpressions:
        - key: kuma.io/sidecar-injection
          operator: In
          values:
            - enabled
        - key: kuma.io/mesh
          operator: Exists
        - key: k8s.kuma.io/zone-proxy-type
          operator: Exists
    clientConfig:
      caBundle: XYZ
      service:
        namespace: kuma-system
        name: kuma-control-plane
        path: /inject-sidecar
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kuma-validating-webhook-configuration
  namespace: kuma-system
  labels: 
    app: kuma-control-plane
    app.kubernetes.io/name: kuma
    app.kubernetes.io/instance: kuma
webhooks:
  - name: validator.kuma-admission.kuma.io
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: kuma.io/sidecar-injection
          operator: Exists
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
          - kube-system
    clientConfig:
      caBundle: XYZ
      service:
        namespace: kuma-system
        name: kuma-control-plane
        path: /validate-kuma-io-v1alpha1
    rules:
      - apiGroups:
          - kuma.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - dataplanes
          - meshes
          - zones
          - containerpatches
          - meshaccesslogs
          - meshcircuitbreakers
          - meshfaultinjections
          - meshhealthchecks
          - meshhttproutes
          - meshloadbalancingstrategies
          - meshmetrics
          - meshpassthroughs
          - meshproxypatches
          - meshratelimits
          - meshretries
          - meshtcproutes
          - meshtimeouts
          - meshtlses
          - meshtraces
          - meshtrafficpermissions
          - hostnamegenerators
          - meshexternalservices
          - meshidentities
          - meshmultizoneservices
          - meshopentelemetrybackends
          - meshservices
          - meshtrusts
          - meshzoneaddresses
          - workloads
    
      
    sideEffects: None
  - name: secret.validator.kuma-admission.kuma.io
    admissionReviewVersions: ["v1"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - kuma-system
    failurePolicy: Ignore
    clientConfig:
      caBundle: XYZ
      service:
        namespace: kuma-system
        name: kuma-control-plane
        path: /validate-v1-secret
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - secrets
    sideEffects: None
  - name: pod.validator.kuma-admission.kuma.io
    admissionReviewVersions: ["v1"]
    namespaceSelector:
      matchExpressions:
        - key: kuma.io/sidecar-injection
          operator: Exists
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
          - kube-system
          - kuma-system
    failurePolicy: Fail
    clientConfig:
      caBundle: XYZ
      service:
        namespace: kuma-system
        name: kuma-control-plane
        path: /validate-v1-pod
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
    sideEffects: None
